[package]
name = "brightsky"
version = "0.2.0"
edition = "2024"
authors = ["Florentin Eckl <ecklf@icloud.com>"]
description = "A Rust client library for the Bright Sky weather API"
homepage = "https://github.com/ecklf/brightsky-rs"
repository = "https://github.com/ecklf/brightsky-rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["weather", "api", "client", "brightsky", "meteorology"]
categories = ["api-bindings", "web-programming", "science", "embedded", "no-std"]

[dependencies]
# core
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
url = { version = "2", optional = true }
nourl = { version = "0.1", optional = true }
# error handling
thiserror = { version = "2.0", optional = true }

# std backend
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
# compression (for radar data - std)
flate2 = { version = "1.1", optional = true }

# embedded backend
reqwless = { version = "0.14", default-features = false, optional = true }
embedded-nal-async = { version = "0.9", optional = true }
embedded-io-async = { version = "0.7", optional = true }
heapless = { version = "0.9", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = ["std", "reqwest-client"]

# environment features
std = [
    "dep:thiserror",
    "dep:url",
    "dep:flate2",
    "serde/std",
    "serde_json/std",
    "chrono/std",
    "chrono/clock",
]

# client backends
reqwest-client = ["std", "dep:reqwest", "dep:tokio"]
reqwless-client = [
    "dep:reqwless",
    "dep:embedded-nal-async",
    "dep:embedded-io-async",
    "dep:heapless",
    "dep:nourl",
]

# TLS options for embedded
embedded-tls = ["reqwless-client", "reqwless/embedded-tls"]
